# flutter_quickjs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_quickjs/: FlutterQuickjsPlugin.kt
cxx/: CMakeLists.txt
cxx/quickjs/: quickjs.c
cxx/quickjs/.obj/: .d
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_quickjs_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  Makefile  build_quickjs.sh  flutter_quickjs.podspec
ios/Classes/: FlutterQuickjsPlugin.h  FlutterQuickjsPlugin.m  SwiftFlutterQuickjsPlugin.swift  ffi.cpp
lib/: flutter_quickjs.dart
lib/ffi/: jsvalue.dart  quickjs.dart  utils.dart
lib/src/: constants.dart  jsvalue.dart  quickjs.dart  utils.dart
test/: flutter_quickjs_test.dart
